--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,36 @@
 # Node modules
 node_modules/
+frontend/node_modules/
+backend/node_modules/
 
-# Next.js build output
+# Build outputs
 .next/
-out/
+frontend/.next/
+backend/dist/
+dist/
 
-# Env files
+# Logs
+logs/
+*.log
+
+# Environment files
 .env
 .env.local
 .env.production
 .env.development
+frontend/.env
+frontend/.env.local
+backend/.env
+backend/.env.local
 
-# Log files
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# OS files
+.DS_Store
+Thumbs.db
 
-# Optional: VSCode settings
-.vscode/
+# Vercel / deployment specific
+.vercel/
+frontend/.vercel/
+
+# Git
+.git/
+.gitignore
